--- a/hdbshj_summary.html
+++ b/hdbshj_summary.html
@@ -20,7 +20,8 @@
 <TD>xc6slx16-2ftg256</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Errors:</B></LI></UL></TD>
 <TD>
-No Errors</TD>
+<font color="red"; face="Arial"><b>X </b></font>
+<A HREF_DISABLED='E:/OneDrive - stu.xjtu.edu.cn/Projects/VHDLlearn/shouhuoji\_xmsgs/*.xmsgs?&DataKey=Error'>8 Errors (2 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
@@ -391,7 +392,7 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='E:/OneDrive - stu.xjtu.edu.cn/Projects/VHDLlearn/shouhuoji\hdbshj.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>周一 6月 24 15:58:49 2019</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='E:/OneDrive - stu.xjtu.edu.cn/Projects/VHDLlearn/shouhuoji\hdbshj.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>周一 6月 24 15:58:49 2019</TD><TD ALIGN=LEFT><font color="red"; face="Arial"><b>X </b></font><A HREF_DISABLED='E:/OneDrive - stu.xjtu.edu.cn/Projects/VHDLlearn/shouhuoji\_xmsgs/xst.xmsgs?&DataKey=Error'>8 Errors (2 new)</A></TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='E:/OneDrive - stu.xjtu.edu.cn/Projects/VHDLlearn/shouhuoji\hdbshj.bld'>Translation Report</A></TD><TD>Current</TD><TD>周一 6月 24 16:01:01 2019</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='E:/OneDrive - stu.xjtu.edu.cn/Projects/VHDLlearn/shouhuoji\hdbshj_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>周一 6月 24 16:01:10 2019</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='E:/OneDrive - stu.xjtu.edu.cn/Projects/VHDLlearn/shouhuoji\_xmsgs/map.xmsgs?&DataKey=Info'>6 Infos (0 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='E:/OneDrive - stu.xjtu.edu.cn/Projects/VHDLlearn/shouhuoji\hdbshj.par'>Place and Route Report</A></TD><TD>Current</TD><TD>周一 6月 24 16:01:19 2019</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='E:/OneDrive - stu.xjtu.edu.cn/Projects/VHDLlearn/shouhuoji\_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
@@ -407,4 +408,4 @@ System Settings</A>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 06/24/2019 - 18:55:38
+<br><center><b>Date Generated:</b> 06/24/2019 - 19:30:10
