--- a/hdbshj_summary.html
+++ b/hdbshj_summary.html
@@ -7,7 +7,7 @@
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>shouhuoji.xise</TD>
 <TD BGCOLOR='#FFFF99'><b>Parser Errors:</b></TD>
-<TD ALIGN=LEFT><font color='red'; face='Arial'><b>X </b></font><A HREF_DISABLED='E:/OneDrive - stu.xjtu.edu.cn/Projects/VHDLlearn/shouhuoji\_xmsgs/pn_parser.xmsgs?&DataKey=Error'>1 Error</A></TD>
+<TD> No Errors </TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
@@ -21,7 +21,7 @@
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Errors:</B></LI></UL></TD>
 <TD>
 <font color="red"; face="Arial"><b>X </b></font>
-<A HREF_DISABLED='E:/OneDrive - stu.xjtu.edu.cn/Projects/VHDLlearn/shouhuoji\_xmsgs/*.xmsgs?&DataKey=Error'>19 Errors (19 new)</A></TD>
+<A HREF_DISABLED='E:/OneDrive - stu.xjtu.edu.cn/Projects/VHDLlearn/shouhuoji\_xmsgs/*.xmsgs?&DataKey=Error'>2 Errors (1 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
@@ -392,7 +392,7 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='E:/OneDrive - stu.xjtu.edu.cn/Projects/VHDLlearn/shouhuoji\hdbshj.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>周一 6月 24 15:58:49 2019</TD><TD ALIGN=LEFT><font color="red"; face="Arial"><b>X </b></font><A HREF_DISABLED='E:/OneDrive - stu.xjtu.edu.cn/Projects/VHDLlearn/shouhuoji\_xmsgs/xst.xmsgs?&DataKey=Error'>19 Errors (19 new)</A></TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='E:/OneDrive - stu.xjtu.edu.cn/Projects/VHDLlearn/shouhuoji\hdbshj.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>周一 6月 24 15:58:49 2019</TD><TD ALIGN=LEFT><font color="red"; face="Arial"><b>X </b></font><A HREF_DISABLED='E:/OneDrive - stu.xjtu.edu.cn/Projects/VHDLlearn/shouhuoji\_xmsgs/xst.xmsgs?&DataKey=Error'>2 Errors (1 new)</A></TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='E:/OneDrive - stu.xjtu.edu.cn/Projects/VHDLlearn/shouhuoji\hdbshj.bld'>Translation Report</A></TD><TD>Current</TD><TD>周一 6月 24 16:01:01 2019</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='E:/OneDrive - stu.xjtu.edu.cn/Projects/VHDLlearn/shouhuoji\hdbshj_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>周一 6月 24 16:01:10 2019</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='E:/OneDrive - stu.xjtu.edu.cn/Projects/VHDLlearn/shouhuoji\_xmsgs/map.xmsgs?&DataKey=Info'>6 Infos (0 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='E:/OneDrive - stu.xjtu.edu.cn/Projects/VHDLlearn/shouhuoji\hdbshj.par'>Place and Route Report</A></TD><TD>Current</TD><TD>周一 6月 24 16:01:19 2019</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='E:/OneDrive - stu.xjtu.edu.cn/Projects/VHDLlearn/shouhuoji\_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
@@ -408,4 +408,4 @@ System Settings</A>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 06/24/2019 - 21:21:49
+<br><center><b>Date Generated:</b> 06/24/2019 - 21:25:08
